--- a/axit/index.html
+++ b/axit/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 </head>
@@ -28,7 +28,6 @@
     <div class="top-header">
         <div class="container">
             <img src="img/axit-logo.png"/>
-
 
 
             <div id="nav-icon1" class="navbar-toggle" data-toggle="collapse"
@@ -48,41 +47,41 @@
     </div>
     <div class="slider ">
         <div class="container">
-                <div class="wrap-content-header clearfix">
-                    <div class="slider-left col-sm-6">
-                        <div class="wrap-slider-left">
-                            <img src="img/logo-slider.png"/>
-                            <h1 class="raleway">
-                                MODERN AXURE TEMPLATE
-                                FOR BEAUTIFUL PROTOTYPES
-                            </h1>
-                            <div class="border">
-                            </div>
-                            <p class="raleway-light">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-                                accumsan et viverra justo commodo.
-                            </p>
-                            <button class="btn">Download</button>
+            <div class="wrap-content-header clearfix">
+                <div class="slider-left col-sm-6">
+                    <div class="wrap-slider-left">
+                        <img src="img/logo-slider.png"/>
+                        <h1 class="raleway">
+                            MODERN AXURE TEMPLATE
+                            FOR BEAUTIFUL PROTOTYPES
+                        </h1>
+                        <div class="border">
                         </div>
-                    </div>
-                    <div class="slider-right col-sm-6">
-                        <div class="wrap-silder-right">
-                            <div class="slider-right-top">
-                                Try Your <span>FREE</span> Trial Today
-                            </div>
-                            <div class="slide-right-body">
-                                <input class="input" type="text" placeholder="Name"/>
-                                <input class="input" type="text" placeholder="Email"/>
-                                <input class="input" type="password" placeholder="Password"/>
-                            </div>
-                            <button class="slider-right-bottom btn">
-                                Get Started
-                            </button>
-                        </div>
-
+                        <p class="raleway-light">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                            euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                            accumsan et viverra justo commodo.
+                        </p>
+                        <button class="btn">Download</button>
                     </div>
                 </div>
+                <div class="slider-right col-sm-6">
+                    <div class="wrap-silder-right">
+                        <div class="slider-right-top">
+                            Try Your <span>FREE</span> Trial Today
+                        </div>
+                        <div class="slide-right-body">
+                            <input class="input" type="text" placeholder="Name"/>
+                            <input class="input" type="text" placeholder="Email"/>
+                            <input class="input" type="password" placeholder="Password"/>
+                        </div>
+                        <button class="slider-right-bottom btn">
+                            Get Started
+                        </button>
+                    </div>
+
+                </div>
+            </div>
 
         </div>
     </div>
@@ -110,8 +109,8 @@
         <div class="clearfix">
             <ul class="nav nav-tabs col-sm-2 tab-pills">
                 <li href="#tab_a"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
-                <li href="#tab_b"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
-                <li href="#tab_c"><a  href="#tab_c" data-toggle="tab">Tab 3</a></li>
+                <li href="#tab_b" class="border-left"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
+                <li href="#tab_c"><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
             </ul>
             <div class="col-sm-6 sub-tab-content tab-content">
                 <div class="tab-pane active fade in" id="tab_a">
@@ -276,9 +275,9 @@
 <section class="pricing-option">
     <div class="container">
         <div class="pricing-option-title">
-            <h2>
+            <h1>
                 PRICING OPTIONS
-            </h2>
+            </h1>
             <div class="border">
 
             </div>
@@ -292,12 +291,16 @@
                     <div class="top-basic">
                         Basic
                     </div>
-                    <img class="img-pricing" src="img/pricing-option-0.png"/>
+                    <!--<img class="img-pricing" src="img/pricing-option-0.png"/>-->
+                    <div class="number">
+                        <span class="dolar">$</span>
+                        <span class="number-size">0</span>
+                    </div>
                     <div class="bottom-basic">
                         <strong>Free for life</strong>
                     </div>
                     <div class="row1 basic-row">
-                            1 GB OF SPACE
+                        1 GB OF SPACE
                     </div>
                     <div class="row2 basic-row">
                         <span>
@@ -333,9 +336,16 @@
                     <div class="top-professional">
                         Professional
                     </div>
-                    <img class="img-pricing" src="img/pricing-option-19.png"/>
+                    <!--<img class="img-pricing" src="img/pricing-option-19.png"/>-->
+                    <div class="number">
+                        <span class="dolar">$</span>
+                        <span class="number-size">19</span>
+                    </div>
                     <div class="bottom-professional">
-                        Monthly Payment
+                        <strong>Monthly Payment</strong>
+                    </div>
+                    <div CLASS="most-popular">
+                        OUR MOST POPULAR
                     </div>
                     <div class="row1 basic-row">
                         1 GB OF SPACE
@@ -372,7 +382,11 @@
                     <div class="top-enterprise">
                         Enterprise
                     </div>
-                    <img class="img-pricing" src="img/pricing-option-70.png">
+                    <!--<img class="img-pricing" src="img/pricing-option-70.png">-->
+                    <div class="number">
+                        <span class="dolar">$</span>
+                        <span class="number-size">70</span>
+                    </div>
                     <div class="balance-hover">
                     </div>
                     <div class="row1 basic-row">
@@ -409,7 +423,87 @@
     </div>
 </section>
 <section class="customer">
+    <div class="container">
+        <div class="customer-title">
+            <h1>
+                WHAT OUR CUSTOMER ARE SAYING
+            </h1>
+            <div class="border">
 
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="customer-content clearfix">
+            <div class="col-sm-4 customer-saying">
+                <p class="txt">
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Doloribus
+                    accusamus expedita repellat similique
+                    odio aspernatur ex, architecto eaque
+                    quo suscipit.
+                </p>
+                <div class="apex-dn"></div>
+                <div class="information-person">
+                    <img src="img/customer.png">
+                    <div class="information">
+                        <h3>
+                            Jeremy H.
+                        </h3>
+                        <p>
+                            Manager
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm-4 customer-saying">
+                <p class="txt">
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Doloribus
+                    accusamus expedita repellat similique
+                    odio aspernatur ex, architecto eaque
+                    quo suscipit.
+                </p>
+                <div class="apex-dn"></div>
+                <div class="information-person">
+                    <img src="img/customer.png">
+                    <div class="information">
+                        <h3>
+                            Jeremy S.
+                        </h3>
+                        <p>
+                            Freelancer
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm-4 customer-saying">
+                <p class="txt">
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Doloribus
+                    accusamus expedita repellat similique
+                    odio aspernatur ex, architecto eaque
+                    quo suscipit.
+                </p>
+                <div class="apex-dn"></div>
+                <div class="information-person">
+                    <img src="img/customer.png">
+                    <div class="information">
+                        <h3>
+                            Jeremy W.
+                        </h3>
+                        <p>
+                            Photographer
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <section class="stylish-axure">
     <div class="stylish-axure-content">
@@ -419,7 +513,7 @@
         <div class="border">
         </div>
         <p>
-            Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+            Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
         </p>
         <button class="btn">Download</button>
     </div>
@@ -441,8 +535,8 @@
         <div class="clearfix">
             <div class="col-sm-6 info">
                 <input class="input" name="name" type="text" placeholder="Name"/>
-                <input class="input"  name="email" type="text" placeholder="Email"/>
-                <input class="input"  name="subject" type="text" placeholder="Subject"/>
+                <input class="input" name="email" type="text" placeholder="Email"/>
+                <input class="input" name="subject" type="text" placeholder="Subject"/>
             </div>
             <div class="col-sm-6 message">
                 <textarea placeholder="Message"></textarea>
@@ -474,66 +568,66 @@
 </body>
 <script>
     /*
-    * TODO List
-    * 1/Section - Header
-    *   -  Canh giữa phần nội dung chính của Header
-    *  Hint: https://css-tricks.com/centering-css-complete-guide/
-    *   -  Chuyển Get Started thành nút
-    *  Hint: có thể dùng class bootstrap btn-flat, btn-block, hoặc style bằng CSS
-    *   -  Navbar nên có trạng thái Hover đổi màu
-    *   -  Button Download nên có trạng thái hover (nền trắng chữ đen)
-    *   -  Phần Ops-in nên canh giữa các icon mạng xã hộitab, thêm
-    *  Hint: https://css-tricks.com/centering-css-complete-guide/
-    *
-    *  2/Section - Tab
-    *   - Cần style lại buttonCSS, bỏ border, thêm
-    *   Hint: có thể dùng class bootstrap cho button (btn), hoặc style bằng shadow
-    *   - Các Tab có thể thêm animationoptional chuyển màu, nên đặt thêm thuộc tính
-    *   pointer:cursor vào từng div.tab
-    *
-    *   3/ Section - Sublist
-    *   - Text bị hình đẩy ko đều
-    *   Hint: Dùng overflow: hidden cho element cha, hoặc clear:left;
-    *   - Canh khoảng cách chưa giống thiết kế
-    *
-    *   4/ Section - Standard picture
-    *    - Font size tủa title chưa đồng bộ với các mục khác
-    *
-    *   5/
-    *    - Padding trên dưới và font- chưa đúngweight
-    *    - Font chữa thẻ p chưa đồng bộ với các section khác
-    *
-    *   6/ Section Pricing
-    *   - Thẻ ở giữa còn thiếu thông tin
-    *   - Margin chưa đúng so với thiết kế
-    *
-    *   7/ Thiếu phần testimonial
-    *
-    *   8/ Phần stylish-axure
-    *    -  Button thêm Hover effect (giống với hea   *
-    *   9/ Section - Contact Ustrên
-    *    - Title còn thiếu gạch chân
-    *    - Bỏ reize của Text Area
-    *    - Style lại button như
-    *
-    * Conclusion
-    *  -  kiểm tra lại tất cả các phần về padding, margin, font-size,
-    *  đồng bộ giữa các thẻ title và paragraph.
-    *  - Thêm hiệu ứng Hover cho các Call to action (link, button, icon mạng xã )hội
-    *  - Kiểm tra border radius hộp thoại đăng nhập
-    *  - Tìm giải pháp nén các file hình để giảm dung lượng
-    *  Hint: Sử dụng tool nén ảnh trực tuyến :
-    *  Save image for web tren PSD: CTRL(C)+ALT+SHIFT+S;
-    *  https://tinypng.com/
-    *  http://optimizilla.com/vi/
-    *
-    *  Recommend nghiên cứu về CSS Animation
-    *  Tài liệu Animation:
-    *  http://file.allitebooks.com/20160513/Transitions%20and%20Animations%20in%20CSS.pdf
-    *
-    *  Tested by Nihato
-    *
-    * */
+     * TODO List
+     * 1/Section - Header
+     *   -  Canh giữa phần nội dung chính của Header
+     *  Hint: https://css-tricks.com/centering-css-complete-guide/
+     *   -  Chuyển Get Started thành nút
+     *  Hint: có thể dùng class bootstrap btn-flat, btn-block, hoặc style bằng CSS
+     *   -  Navbar nên có trạng thái Hover đổi màu
+     *   -  Button Download nên có trạng thái hover (nền trắng chữ đen)
+     *   -  Phần Ops-in nên canh giữa các icon mạng xã hộitab, thêm
+     *  Hint: https://css-tricks.com/centering-css-complete-guide/
+     *
+     *  2/Section - Tab
+     *   - Cần style lại buttonCSS, bỏ border, thêm
+     *   Hint: có thể dùng class bootstrap cho button (btn), hoặc style bằng shadow
+     *   - Các Tab có thể thêm animationoptional chuyển màu, nên đặt thêm thuộc tính
+     *   pointer:cursor vào từng div.tab
+     *
+     *   3/ Section - Sublist
+     *   - Text bị hình đẩy ko đều
+     *   Hint: Dùng overflow: hidden cho element cha, hoặc clear:left;
+     *   - Canh khoảng cách chưa giống thiết kế
+     *
+     *   4/ Section - Standard picture
+     *    - Font size tủa title chưa đồng bộ với các mục khác
+     *
+     *   5/
+     *    - Padding trên dưới và font- chưa đúngweight
+     *    - Font chữa thẻ p chưa đồng bộ với các section khác
+     *
+     *   6/ Section Pricing
+     *   - Thẻ ở giữa còn thiếu thông tin
+     *   - Margin chưa đúng so với thiết kế
+     *
+     *   7/ Thiếu phần testimonial
+     *
+     *   8/ Phần stylish-axure
+     *    -  Button thêm Hover effect (giống với hea   *
+     *   9/ Section - Contact Ustrên
+     *    - Title còn thiếu gạch chân
+     *    - Bỏ reize của Text Area
+     *    - Style lại button như
+     *
+     * Conclusion
+     *  -  kiểm tra lại tất cả các phần về padding, margin, font-size,
+     *  đồng bộ giữa các thẻ title và paragraph.
+     *  - Thêm hiệu ứng Hover cho các Call to action (link, button, icon mạng xã )hội
+     *  - Kiểm tra border radius hộp thoại đăng nhập
+     *  - Tìm giải pháp nén các file hình để giảm dung lượng
+     *  Hint: Sử dụng tool nén ảnh trực tuyến :
+     *  Save image for web tren PSD: CTRL(C)+ALT+SHIFT+S;
+     *  https://tinypng.com/
+     *  http://optimizilla.com/vi/
+     *
+     *  Recommend nghiên cứu về CSS Animation
+     *  Tài liệu Animation:
+     *  http://file.allitebooks.com/20160513/Transitions%20and%20Animations%20in%20CSS.pdf
+     *
+     *  Tested by Nihato
+     *
+     * */
 </script>
 </html>
 
