fix icon social

--- a/axit/index.html
+++ b/axit/index.html
@@ -97,10 +97,20 @@
                         Aenean euismod bibendum laoreet.
                     </p>
                 </div>
-                <img class="img-social col-sm-7" src="img/media-icon.png"/>
+                <!--<img class="img-social col-sm-7" src="img/media-icon.png"/>-->
+                <div class="col-sm-7 img-social">
+                    <a href="javascript:;"><img src="img/social-icon-1.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-2.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-3.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-4.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-5.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-6.png"></a>
+                    <a href="javascript:;"><img src="img/social-icon-7.png"></a>
+                </div>
             </div>
         </div>
     </div>
+
 </section>
 
 <section class="tab">
@@ -547,12 +557,24 @@
     </div>
 </section>
 <section class="footer">
-    <div class="footer-wrap">
-        <img src="img/footer-img.png"/>
-        <p>
-            2015 Axures Theme
-        </p>
-    </div>
+
+        <div class="footer-wrap">
+            <!--<img src="img/footer-img.png"/>-->
+            <div class="img-social">
+                <a href="javascript:;"><img src="img/footer-icon-1.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-2.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-3.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-4.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-5.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-6.png"></a>
+                <a href="javascript:;"><img src="img/footer-icon-7.png"></a>
+            </div>
+            <p>
+                2015 Axures Theme
+            </p>
+        </div>
+
+
 
 </section>
 
