fix color, margin

--- a/axit/index.html
+++ b/axit/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i" rel="stylesheet"
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 </head>
@@ -118,7 +118,7 @@
 
         <div class="clearfix">
             <ul class="nav nav-tabs col-sm-2 tab-pills">
-                <li href="#tab_a"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
+                <li href="#tab_a" class="active"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
                 <li href="#tab_b" class="border-left"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
                 <li href="#tab_c"><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
             </ul>
@@ -307,7 +307,7 @@
                         <span class="number-size">0</span>
                     </div>
                     <div class="bottom-basic">
-                        <strong>Free for life</strong>
+                        Free for life
                     </div>
                     <div class="row1 basic-row">
                         1 GB OF SPACE
@@ -352,7 +352,7 @@
                         <span class="number-size">19</span>
                     </div>
                     <div class="bottom-professional">
-                        <strong>Monthly Payment</strong>
+                        Monthly Payment
                     </div>
                     <div CLASS="most-popular">
                         OUR MOST POPULAR
@@ -397,7 +397,8 @@
                         <span class="dolar">$</span>
                         <span class="number-size">70</span>
                     </div>
-                    <div class="balance-hover">
+                    <div class="bottom-enterprise">
+                        Monthly Payment
                     </div>
                     <div class="row1 basic-row">
                         1 GB OF SPACE
