fix font, margin, color

--- a/axit/index.html
+++ b/axit/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i" rel="stylesheet"
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500i,600,600i,700" rel="stylesheet">
 
 </head>
 <body>
@@ -117,11 +117,14 @@
     <div class="container">
 
         <div class="clearfix">
-            <ul class="nav nav-tabs col-sm-2 tab-pills">
-                <li href="#tab_a" class="active"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
-                <li href="#tab_b" class="border-left"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
-                <li href="#tab_c"><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
-            </ul>
+            <div class="col-sm-2">
+                <ul class="nav nav-tabs tab-pills">
+                    <li href="#tab_a" class="active"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
+                    <li href="#tab_b" class="border-left"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
+                    <li href="#tab_c"><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
+                </ul>
+            </div>
+
             <div class="col-sm-6 sub-tab-content tab-content">
                 <div class="tab-pane active fade in" id="tab_a">
                     <h3>
