--- a/elena/index.html
+++ b/elena/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300i,400,700,700i" rel="stylesheet">
 
 </head>
 <body>
@@ -23,8 +25,276 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<h1>elena</h1>
+<section class="header">
+    <div class="content-header">
+        <img src="img/logo.png"/>
+        <ul class=" nav menu" id="myNavbar">
+            <li><a class="active" href="#">HOME</a></li>
+            <li><a href="#">SERVICE</a></li>
+            <li><a href="#">FEATURE</a></li>
+            <li><a href="#">CONTACT</a></li>
+        </ul>
+        <h1>
+            HAVE A GOOD DAY
+        </h1>
+        <h2 class="no-background"><span>Just for you on themforest</span></h2>
+        <button>
+            GET YOUR COMPANY NOW
+        </button>
+    </div>
 
+
+</section>
+<section class="profesionals">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-4 col">
+                <img class="personal" src="img/personal-img.png"/>
+                <h3>
+                    PROFESIONALS
+                </h3>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur elit.
+                </p>
+            </div>
+            <div class="col-sm-4 col">
+                <img class="heart" src="img/heart.png"/>
+                <h3 class="title-heart">
+                    AMETEURS
+                </h3>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur elit.
+                </p>
+            </div>
+            <div class="col-sm-4 col">
+                <img src="img/headset.png"/>
+                <h3>
+                    FOR EVERYONE
+                </h3>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur elit.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="reponsive">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-6">
+                <img src="img/responsive-1.png"/>
+                <h2>
+                    REPONSIVE EMAIL TEMPLATE
+                </h2>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
+                </p>
+                <button>
+                    Read more
+                </button>
+            </div>
+            <div class="col-sm-6">
+                <img src="img/responsive.png"/>
+                <h2>
+                    FULLY COMPATIBLE TEMPLATE
+                </h2>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
+                </p>
+                <button>
+                    Read more
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="fully">
+    <div class="container">
+        <div class="fully-title">
+            <img src="img/fully-icon.png"/>
+            <h2>
+                FULLY SUPPORTED TEMPLATE
+            </h2>
+        </div>
+
+        <img class="border" src="img/border.png"/>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus,
+            a adipiscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur.
+            Aenean risus arcu
+        </p>
+        <button>
+            Read more
+        </button>
+    </div>
+</section>
+<section class="layered">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-4 col">
+                <img src="img/layered-1.png"/>
+                <h2>
+                    FULLY LAYERED PSD
+                </h2>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="check">
+                    Check it out >
+                </a>
+            </div>
+            <div class="col-sm-4 col">
+                <img src="img/layered-2.png"/>
+                <h2>
+                    FULLY LAYERED PSD
+                </h2>
+
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="check">
+                    Check it out >
+                </a>
+            </div>
+            <div class="col-sm-4 col">
+                <img src="img/layered-3.png"/>
+                <h2>
+                    FULLY LAYERED PSD
+                </h2>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <a class="check">
+                    Check it out >
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="send">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-6 col">
+                <div class="send-title">
+                    <img src="img/send.png"/>
+                    <h2>
+                        SEND IT NOW
+                    </h2>
+                </div>
+                <div class="border">
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Suspendisse malesuada sodales risus, a adipiscing lorem.
+                </p>
+                <button>
+                    Read more
+                </button>
+            </div>
+            <div class="col-sm-6 col">
+                <div class="send-title">
+                    <img src="img/see.png"/>
+                    <h2>
+                        SEND IT NOW
+                    </h2>
+                </div>
+                <div class="border">
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Suspendisse malesuada sodales risus, a adipiscing lorem.
+                </p>
+                <button>
+                    Read more
+                </button>
+            </div>
+        </div>
+
+    </div>
+</section>
+<section class="themforest">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-6 img">
+                <img src="img/themforest.png">
+            </div>
+            <div class="col-sm-6 content">
+                <h2>
+                    JUST FOR YOU ON THEMFOREST
+                </h2>
+                <div class="border">
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Donec interdum mollis risus, in mattis erat convallis egestas.
+                </p>
+                <button>
+                    Read more
+                </button>
+
+            </div>
+        </div>
+    </div>
+</section>
+<section class="template">
+    <div class="container">
+        <div class="template-title">
+            <img src="img/template-icon.png">
+            <h2>
+                THIS TEMPLATE WAS FEATURED ON
+            </h2>
+        </div>
+        <div class="border">
+
+        </div>
+        <div class="logo">
+            <img src="img/tech-crunch.png"/>
+            <img src="img/promail.png"/>
+            <img src="img/mashable.png"/>
+            <img src="img/atlaspix.png"/>
+        </div>
+    </div>
+
+</section>
+<section class="footer">
+    <div class="container">
+        <span>
+            <span>Elena &copy</span>
+            <span class="color">
+                copyright 2013 - Unsubscribe here
+            </span>
+        </span>
+        <div class="icon">
+            <a href="#"><img src="img/google.png"/></a>
+            <a href="#"><img src="img/faceboook.png"/></a>
+            <a href="#"><img src="img/twiter.png"></a>
+        </div>
+    </div>
+</section>
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
