--- a/elena/index.html
+++ b/elena/index.html
@@ -39,7 +39,7 @@
         </h1>
         <h2 class="no-background"><span>Just for you on themforest</span></h2>
         <button>
-            GET YOUR COMPANY NOW
+            GET YOUR COPY NOW
         </button>
     </div>
 
@@ -101,7 +101,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
                 </p>
-                <button>
+                <button class="btn-reponsive">
                     Read more
                 </button>
             </div>
@@ -116,7 +116,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
                 </p>
-                <button>
+                <button class="btn-reponsive">
                     Read more
                 </button>
             </div>
@@ -219,7 +219,7 @@
                 <div class="send-title">
                     <img src="img/see.png"/>
                     <h2>
-                        SEND IT NOW
+                        VERY NICE TO SEE
                     </h2>
                 </div>
                 <div class="border">
