--- a/elena/index.html
+++ b/elena/index.html
@@ -283,7 +283,7 @@
 <section class="footer">
     <div class="container">
         <span>
-            <span>Elena &copy</span>
+            <span class="elena">Elena &copy</span>
             <span class="color">
                 copyright 2013 - Unsubscribe here
             </span>
