--- a/elena/index.html
+++ b/elena/index.html
@@ -29,7 +29,7 @@
     <div class="content-header">
         <img src="img/logo.png"/>
         <ul class=" nav menu" id="myNavbar">
-            <li><a class="active" href="#">HOME</a></li>
+            <li class="active" ><a href="#">HOME</a></li>
             <li><a href="#">SERVICE</a></li>
             <li><a href="#">FEATURE</a></li>
             <li><a href="#">CONTACT</a></li>
@@ -90,14 +90,12 @@
 <section class="reponsive">
     <div class="container">
         <div class="clearfix">
-            <div class="col-sm-6">
+            <div class="col-sm-6 col">
                 <img src="img/responsive-1.png"/>
                 <h2>
                     REPONSIVE EMAIL TEMPLATE
                 </h2>
-                <div class="border">
-
-                </div>
+                <img class="border" src="img/reponsive-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
                 </p>
@@ -105,14 +103,12 @@
                     Read more
                 </button>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col">
                 <img src="img/responsive.png"/>
                 <h2>
                     FULLY COMPATIBLE TEMPLATE
                 </h2>
-                <div class="border">
-
-                </div>
+                <img src="img/reponsive-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis
                 </p>
@@ -151,9 +147,7 @@
                 <h2>
                     FULLY LAYERED PSD
                 </h2>
-                <div class="border">
-
-                </div>
+                <img class="border" src="img/layer-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
@@ -162,14 +156,12 @@
                 </a>
             </div>
             <div class="col-sm-4 col">
-                <img src="img/layered-2.png"/>
+                <img  src="img/layered-2.png"/>
                 <h2>
                     FULLY LAYERED PSD
                 </h2>
 
-                <div class="border">
-
-                </div>
+                <img class="border" src="img/layer-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
@@ -182,9 +174,7 @@
                 <h2>
                     FULLY LAYERED PSD
                 </h2>
-                <div class="border">
-
-                </div>
+                <img class="border" src="img/layer-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
@@ -205,8 +195,7 @@
                         SEND IT NOW
                     </h2>
                 </div>
-                <div class="border">
-                </div>
+                <img class="border" src="img/send-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse malesuada sodales risus, a adipiscing lorem.
@@ -222,8 +211,7 @@
                         VERY NICE TO SEE
                     </h2>
                 </div>
-                <div class="border">
-                </div>
+                <img class="border" src="img/send-border.png"/>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse malesuada sodales risus, a adipiscing lorem.
@@ -246,8 +234,7 @@
                 <h2>
                     JUST FOR YOU ON THEMFOREST
                 </h2>
-                <div class="border">
-                </div>
+                <img class="border" src="img/themforest-border.png">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Donec interdum mollis risus, in mattis erat convallis egestas.
@@ -271,11 +258,19 @@
         <div class="border">
 
         </div>
-        <div class="logo">
-            <img src="img/tech-crunch.png"/>
-            <img src="img/promail.png"/>
-            <img src="img/mashable.png"/>
-            <img src="img/atlaspix.png"/>
+        <div class="logo clearfix">
+            <div class="col-sm-3 col">
+                <img src="img/tech-crunch.png"/>
+            </div>
+            <div class="col-sm-3 col promail">
+                <img src="img/promail.png"/>
+            </div>
+            <div class="col-sm-3 col mashabale">
+                <img src="img/mashable.png"/>
+            </div>
+            <div class="col-sm-3 col">
+                <img src="img/atlaspix.png"/>
+            </div>
         </div>
     </div>
 
