--- a/elena/index.html
+++ b/elena/index.html
@@ -34,7 +34,7 @@
             <li><a href="#">FEATURE</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
-        <h1>
+        <h1 class="title-header">
             HAVE A GOOD DAY
         </h1>
         <h2 class="no-background"><span>Just for you on themforest</span></h2>
