fix heigh profesional

--- a/elena/index.html
+++ b/elena/index.html
@@ -49,7 +49,10 @@
     <div class="container">
         <div class="clearfix">
             <div class="col-sm-4 col">
-                <img class="personal" src="img/personal-img.png"/>
+                <div class="img-fix">
+                    <img class="personal" src="img/personal-img.png"/>
+                </div>
+
                 <h3>
                     PROFESIONALS
                 </h3>
@@ -61,7 +64,10 @@
                 </p>
             </div>
             <div class="col-sm-4 col">
-                <img class="heart" src="img/heart.png"/>
+                <div class="img-fix">
+                    <img class="heart" src="img/heart.png"/>
+                </div>
+
                 <h3 class="title-heart">
                     AMETEURS
                 </h3>
@@ -73,7 +79,10 @@
                 </p>
             </div>
             <div class="col-sm-4 col">
-                <img src="img/headset.png"/>
+                <div class="img-fix">
+                    <img src="img/headset.png"/>
+                </div>
+
                 <h3>
                     FOR EVERYONE
                 </h3>
