--- a/musican/index.html
+++ b/musican/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500i,600,600i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet">
 
 </head>
 <body>
@@ -24,6 +24,129 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
+<section class="header">
+    <div id="myCarousel" class="carousel slide main-slider" data-ride="carousel">
+        <header class="header-container">
+            <div class="navigation ">
+                <div class="container">
+                    <nav class="navbar navbar-inverse">
+                        <div class="container-fluid">
+                            <div class="collapse navbar-collapse" id="myNavbar">
+                                <ul class="nav navbar-nav navbar-xs nav-size">
+                                    <li><a href="#">ABOUT</a></li>
+                                    <li><a href="#">DISCOGRAPHY</a></li>
+                                    <li><a href="#">CONCERT TOURS </a></li>
+                                    <li><a href="#">LATTER COMPOSITIONS</a></li>
+                                    <li><a href="#">NEW TRACKS</a></li>
+                                    <li><a href="#">UPCOMING EVENTS</a></li>
+                                    <li><a href="#">HISTORY</a></li>
+                                    <li><a href="#">CONTACT</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/logo.png"/>
+            </div>
+
+        </div>
+    </div>
+
+
+</section>
+<section class="discography">
+    <div class="container">
+        <h2 class="background">DISCOGRAPHY</h2>
+        <p class="txt-discography">
+            September 4 world heard Night Visions, the first full album.
+            He reached the 2 position in the chart Billboard 200.
+            The single &laquo;It's Time&raquo; took 22 th place in the Billboard Hot 100,
+            4th in the Billboard Alternative and Billboard Rock, and now went platinum.
+        </p>
+        <div class="clearfix">
+            <div class="col-sm-6 col-left">
+                <p>2010</p>
+                <div class="border">
+                </div>
+                <p class="hell">
+                    HELL AND SILENCE
+                </p>
+            </div>
+            <div class="col-sm-6 col-right">
+                <h3>
+                    Hell and Silence is an EP by Las Vegas rock group
+                </h3>
+                <p>
+                    Hell and Silence is an EP by Las Vegas rock group , released in March 2010 in the United States.
+                    It was recorded at Battle Born Studios. All songs were written by Imagine Dragons and self-produced.
+                    The EP was in part mixed by Grammy nominated engineer Mark Needham.
+                    To promote the album the band performed five shows at SXSW 2010 including at the BMI Official
+                    Showcase.
+                    While at SXSW they were endorsed by Blue Microphones.
+                    They also toured the western United States with Nico Vega and Saint Motel.
+                    They also performed at Bite of Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
+                    Festival, and Fork Fest.
+                </p>
+                <a class="play-img" href="#"><span>PLAY</span><img src="img/play-img-orginal.png"/></a>
+            </div>
+        </div>
+        <div class="clearfix">
+            <div class="col-sm-6 col-left">
+                <p>2012</p>
+                <div class="border">
+                </div>
+                <p class="hell">
+                    NIGHT VISIONS
+                </p>
+            </div>
+            <div class="col-sm-6 col-right">
+                <h3>
+                    Night Visions is the debut studio album by American rock band
+                </h3>
+                <p>
+                    It was released on September 4, 2012 through Interscope Records.
+                    The extended track was released on February 12, 2013, adding three more songs.
+                    Recorded between 2010 and 2012, the album was primarily produced by the band themselves,
+                    as well as English hip-hop producer Alex da Kid and Brandon Darner from the American indie rock
+                    group The Envy Corps.
+                    It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album took three years to
+                    finish ...
+                </p>
+                <a class="play-img" href="#"><span>PLAY</span><img src="img/play-img-orginal.png"/></a>
+            </div>
+        </div>
+        <div class="clearfix">
+            <div class="col-sm-6 col-left">
+                <p>2015</p>
+                <div class="border">
+                </div>
+                <p class="hell">
+                    SMOKE + MIRRORS
+                </p>
+            </div>
+            <div class="col-sm-6 col-right">
+                <h3>
+                    The album was recorded during 2014
+                    at the band's home studio in Las Vegas, Nevada
+                </h3>
+                <p>
+                    Self-produced by members of the band along with English hip-hop producer Alexander Grant,
+                    known by his moniker Alex da Kid,
+                    the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17, 2015, in
+                    the United States.
+                </p>
+                <a class="play-img" href="#"><span>PLAY</span><img src="img/play-img-orginal.png"/></a>
+            </div>
+        </div>
+
+    </div>
+    <img class="background-discography" src="img/background-discography.png"/>
+
+</section>
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
